--- a/index.html
+++ b/index.html
@@ -3,98 +3,145 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Security Check</title>
+<title>Security System</title>
 
 <style>
-body {
+body{
   margin:0;
-  background:black;
-  color:white;
+  background:#000;
   font-family:Arial;
-  text-align:center;
+  color:#fff;
   overflow:hidden;
 }
 
-video {
-  width:100%;
-  height:100vh;
-  object-fit:cover;
-}
-
-.hidden {
-  display:none;
-}
-
-#phoneSection {
+/* الفيديو بالحجم الأصلي */
+video{
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
+  max-width:100%;
+  max-height:100%;
 }
 
-input {
+/* تأثير Glitch */
+.glitch{
+  position:absolute;
+  top:20px;
+  left:50%;
+  transform:translateX(-50%);
+  font-size:22px;
+  color:#fff;
+  animation:glitch 1s infinite;
+}
+
+@keyframes glitch{
+  0%{text-shadow:2px 0 red,-2px 0 blue;}
+  20%{text-shadow:-2px 0 red,2px 0 blue;}
+  40%{text-shadow:2px 2px red,-2px -2px blue;}
+  60%{text-shadow:-2px -2px red,2px 2px blue;}
+  80%{text-shadow:2px -2px red,-2px 2px blue;}
+  100%{text-shadow:none;}
+}
+
+/* انتقال Fade */
+.fade-out{
+  animation:fadeOut 0.7s forwards;
+}
+.fade-in{
+  animation:fadeIn 0.7s forwards;
+}
+
+@keyframes fadeOut{
+  from{opacity:1;}
+  to{opacity:0;}
+}
+@keyframes fadeIn{
+  from{opacity:0;}
+  to{opacity:1;}
+}
+
+/* صندوق الإدخال */
+#phoneSection{
+  position:absolute;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  text-align:center;
+  display:none;
+}
+
+input{
   padding:12px;
   font-size:18px;
-  width:250px;
+  width:260px;
   text-align:center;
+  background:#111;
+  border:1px solid #333;
+  color:#fff;
 }
 
-button {
-  padding:12px 25px;
+/* زر متقدم */
+.btn{
+  padding:12px 30px;
   font-size:18px;
   margin-top:15px;
   cursor:pointer;
   background:#111;
-  color:white;
+  color:#fff;
   border:1px solid #444;
+  transition:0.3s;
+  animation:pulse 1.5s infinite;
 }
 
-button:hover {
+.btn:hover{
   background:#222;
 }
 
-#resultSection {
+@keyframes pulse{
+  0%{box-shadow:0 0 5px #0ff;}
+  50%{box-shadow:0 0 20px #0ff;}
+  100%{box-shadow:0 0 5px #0ff;}
+}
+
+/* القسم بعد الفيديو الثاني */
+#resultSection{
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
-}
-
-#resultSection p {
-  margin-top:15px;
-  font-size:16px;
-  color:#ccc;
+  text-align:center;
+  display:none;
 }
 </style>
 </head>
 <body>
 
-<!-- الفيديو الأول -->
+<div class="glitch">SECURITY CHECK SYSTEM</div>
+
 <video id="video1" autoplay playsinline>
   <source src="h.mp4" type="video/mp4">
 </video>
 
-<!-- إدخال الرقم -->
-<div id="phoneSection" class="hidden">
+<div id="phoneSection">
   <input type="text" id="phone" placeholder="ادخل رقم الهاتف">
   <br>
-  <button onclick="startSecondVideo()">تحقق</button>
+  <button class="btn" onclick="startSecondVideo()">تحقق</button>
 </div>
 
-<!-- الفيديو الثاني -->
-<video id="video2" class="hidden" playsinline>
+<video id="video2" playsinline style="display:none;">
   <source src="h2.mp4" type="video/mp4">
 </video>
 
-<!-- القسم بعد انتهاء الفيديو الثاني -->
-<div id="resultSection" class="hidden">
-  <button onclick="startThirdVideo()">تم التحديد</button>
-  <p>اضغط الآن للتعرف على بيانات المواقع المجهولة التي قامت باختراق جهازك</p>
-  <button onclick="startThirdVideo()">اضغط</button>
+<div id="resultSection">
+  <button class="btn" onclick="startThirdVideo()">تم التحديد</button>
+  <p style="margin-top:15px;color:#aaa;">
+    اضغط الآن للتعرف على بيانات المواقع المجهولة
+  </p>
+  <button class="btn" onclick="startThirdVideo()">اضغط</button>
 </div>
 
-<!-- الفيديو الثالث -->
-<video id="video3" class="hidden" playsinline>
+<video id="video3" playsinline style="display:none;">
   <source src="h3.mp4" type="video/mp4">
 </video>
 
@@ -105,45 +152,58 @@ let video3 = document.getElementById("video3");
 let phoneSection = document.getElementById("phoneSection");
 let resultSection = document.getElementById("resultSection");
 
-/* ---------- الفيديو الأول ---------- */
+/* تشغيل 20 ثانية فقط للفيديو الأول */
+setTimeout(()=>{
+  if(!video1.paused){
+    goToPhone();
+  }
+},20000);
 
-document.body.addEventListener("click", function firstClick(){
+/* تخطي عند الضغط */
+document.body.addEventListener("click", function skip(){
   goToPhone();
-  document.body.removeEventListener("click", firstClick);
+  document.body.removeEventListener("click", skip);
 });
 
-video1.onended = function() {
-  goToPhone();
-};
+video1.onended = goToPhone;
 
 function goToPhone(){
-  video1.pause();
-  video1.classList.add("hidden");
-  phoneSection.classList.remove("hidden");
+  video1.classList.add("fade-out");
+  setTimeout(()=>{
+    video1.pause();
+    video1.style.display="none";
+    phoneSection.style.display="block";
+    phoneSection.classList.add("fade-in");
+  },700);
 }
-
-/* ---------- الفيديو الثاني ---------- */
 
 function startSecondVideo(){
   let phone = document.getElementById("phone").value;
-  if(phone.trim() == "") return;
+  if(phone.trim()=="") return;
 
-  phoneSection.classList.add("hidden");
-  video2.classList.remove("hidden");
-  video2.play();
+  phoneSection.classList.add("fade-out");
+  setTimeout(()=>{
+    phoneSection.style.display="none";
+    video2.style.display="block";
+    video2.classList.add("fade-in");
+    video2.play();
+  },700);
 }
 
 video2.onended = function(){
-  resultSection.classList.remove("hidden");
+  resultSection.style.display="block";
+  resultSection.classList.add("fade-in");
 };
 
-/* ---------- الفيديو الثالث ---------- */
-
 function startThirdVideo(){
-  resultSection.classList.add("hidden");
-  video2.classList.add("hidden");
-  video3.classList.remove("hidden");
-  video3.play();
+  resultSection.classList.add("fade-out");
+  setTimeout(()=>{
+    resultSection.style.display="none";
+    video2.style.display="none";
+    video3.style.display="block";
+    video3.classList.add("fade-in");
+    video3.play();
+  },700);
 }
 </script>
 
