Update title and styles in index.html

--- a/index.html
+++ b/index.html
@@ -3,69 +3,89 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Secure Access</title>
+<title>Cyber Ultimate Cinematic</title>
 
 <style>
 body{
   margin:0;
   background:black;
-  color:#00ffff;
-  font-family:Arial;
-  text-align:center;
+  color:#00ffee;
+  font-family:monospace;
   overflow:hidden;
+  text-align:center;
+}
+
+/* تأثير CRT + Scanlines */
+body::after{
+  content:"";
+  position:fixed;
+  top:0;left:0;
+  width:100%;height:100%;
+  background:repeating-linear-gradient(
+    to bottom,
+    rgba(0,255,255,0.05) 0px,
+    rgba(0,255,255,0.05) 1px,
+    transparent 1px,
+    transparent 3px
+  );
+  pointer-events:none;
+}
+
+/* طبقة Noise */
+body::before{
+  content:"";
+  position:fixed;
+  top:0;left:0;
+  width:100%;height:100%;
+  background:url('https://grainy-gradients.vercel.app/noise.svg');
+  opacity:0.07;
+  pointer-events:none;
 }
 
 .hidden{display:none;}
 
-#gate{
+.center{
   position:absolute;
   top:50%;
   left:50%;
   transform:translate(-50%,-50%);
+  width:90%;
 }
 
-input{
-  padding:14px;
-  font-size:18px;
-  width:280px;
-  text-align:center;
-  background:#111;
-  border:1px solid #00ffff;
-  color:#00ffff;
+/* Glitch */
+.glitch{
+  animation:glitch 0.3s linear 6;
 }
-
-button{
-  padding:12px 30px;
-  font-size:18px;
-  margin-top:15px;
-  cursor:pointer;
-  background:#00ffff;
-  color:black;
-  border:none;
-}
-
-button:disabled{
-  background:#444;
-  color:#111;
-  cursor:not-allowed;
-}
-
-#blocked{
-  position:absolute;
-  top:50%;
-  left:50%;
-  transform:translate(-50%,-50%);
-  font-size:40px;
-  color:red;
-  animation:glitch 0.2s linear 8;
-}
-
 @keyframes glitch{
   0%{transform:translate(-50%,-50%)}
   25%{transform:translate(-52%,-48%)}
   50%{transform:translate(-48%,-52%)}
   75%{transform:translate(-52%,-52%)}
   100%{transform:translate(-50%,-50%)}
+}
+
+input{
+  padding:14px;
+  font-size:18px;
+  width:280px;
+  background:#111;
+  border:1px solid #00ffee;
+  color:#00ffee;
+  text-align:center;
+}
+
+button{
+  padding:12px 25px;
+  font-size:18px;
+  margin-top:15px;
+  background:#00ffee;
+  color:black;
+  border:none;
+  cursor:pointer;
+}
+
+button:hover{
+  background:#00cccc;
 }
 
 video{
@@ -76,72 +96,168 @@ video{
   max-width:100%;
   max-height:100%;
 }
+
+/* شاشة الحظر */
+#blocked{
+  color:red;
+  font-size:40px;
+}
+
+/* شاشة الفحص */
+.scan{
+  font-size:22px;
+  animation:blink 1s infinite;
+}
+@keyframes blink{
+  0%{opacity:1}
+  50%{opacity:0.3}
+  100%{opacity:1}
+}
+
+.progressBar{
+  width:80%;
+  height:20px;
+  border:1px solid #00ffee;
+  margin:20px auto;
+}
+
+.progress{
+  height:100%;
+  width:0%;
+  background:#00ffee;
+  transition:width 0.2s;
+}
+
+.counter{
+  font-size:30px;
+  letter-spacing:5px;
+}
 </style>
 </head>
+
 <body>
 
-<!-- شاشة الدخول -->
-<div id="gate">
-  <h2>ادخل كود الدفع</h2>
-  <input type="text" id="codeInput">
-  <br>
-  <button onclick="checkCode()">دخول</button>
-  <p id="msg" style="color:red;"></p>
+<!-- شاشة كود الدفع -->
+<div id="gate" class="center glitch">
+<h2>ادخل كود الدفع</h2>
+<input type="text" id="codeInput">
+<br>
+<button onclick="checkCode()">دخول</button>
 </div>
 
-<!-- شاشة حظر -->
-<div id="blocked" class="hidden">
-  لا يمكنك الدخول مرة أخرى
+<!-- شاشة الحظر -->
+<div id="blocked" class="center hidden glitch">
+لا يمكنك الدخول مرة أخرى
 </div>
 
-<!-- الفيديو الأول -->
-<video id="video1" class="hidden" src="h.mp4"></video>
+<!-- الفيديوهات -->
+<video id="v1" class="hidden" src="h.mp4"></video>
+<video id="v2" class="hidden" src="h2.mp4"></video>
+<video id="v3" class="hidden" src="h3.mp4"></video>
+
+<!-- شاشة إدخال الهاتف -->
+<div id="phoneScreen" class="center hidden glitch">
+<h2>ادخل رقم الهاتف للحماية</h2>
+<input type="text" id="phoneInput">
+<br>
+<button onclick="startVideo2()">تحقق</button>
+</div>
+
+<!-- شاشة تم التحديد -->
+<div id="confirmScreen" class="center hidden glitch">
+<h3>تم التحديد</h3>
+<p>اضغط الآن للتعرف على بيانات المواقع المجهولة</p>
+<button onclick="startVideo3()">اضغط</button>
+</div>
+
+<!-- شاشة الفحص -->
+<div id="scanScreen" class="center hidden">
+<div class="scan">جاري الفحص الأمني التوعوي...</div>
+<div class="progressBar">
+<div class="progress" id="progressBar"></div>
+</div>
+<div class="counter" id="counter">000000</div>
+</div>
 
 <script>
 
 const correctCode="885147682861azw11a";
 
-// لو كان محظور قبل كده
+/* حظر دائم */
 if(localStorage.getItem("blocked") === "yes"){
   document.getElementById("gate").classList.add("hidden");
   document.getElementById("blocked").classList.remove("hidden");
 }
 
-// التحقق من كود الدفع
+/* تحقق الكود */
 function checkCode(){
   let code=document.getElementById("codeInput").value;
-
   if(code === correctCode){
     document.getElementById("gate").classList.add("hidden");
-    startVideo();
+    startVideo1();
   }else{
-    // حظر نهائي
     localStorage.setItem("blocked","yes");
     document.getElementById("gate").classList.add("hidden");
     document.getElementById("blocked").classList.remove("hidden");
   }
 }
 
-// تشغيل الفيديو الأول 20 ثانية أو تخطي بالضغط
-function startVideo(){
-  let v=document.getElementById("video1");
+/* فيديو 1 */
+function startVideo1(){
+  let v=document.getElementById("v1");
   v.classList.remove("hidden");
   v.play();
+  v.onclick=skipVideo1;
+  setTimeout(skipVideo1,20000);
+  v.onended=skipVideo1;
+}
 
-  // تخطي بالضغط
-  v.onclick=function(){
-    v.pause();
+function skipVideo1(){
+  let v=document.getElementById("v1");
+  v.pause();
+  v.classList.add("hidden");
+  document.getElementById("phoneScreen").classList.remove("hidden");
+}
+
+/* فيديو 2 */
+function startVideo2(){
+  let phone=document.getElementById("phoneInput").value;
+  if(!phone.trim()) return;
+  document.getElementById("phoneScreen").classList.add("hidden");
+  let v=document.getElementById("v2");
+  v.classList.remove("hidden");
+  v.play();
+  v.onended=()=>{
     v.classList.add("hidden");
+    document.getElementById("confirmScreen").classList.remove("hidden");
   };
+}
 
-  // بعد 20 ثانية يختفي
-  setTimeout(()=>{
-    v.pause();
-    v.classList.add("hidden");
-  },20000);
+/* فيديو 3 */
+function startVideo3(){
+  document.getElementById("confirmScreen").classList.add("hidden");
+  let v=document.getElementById("v3");
+  v.classList.remove("hidden");
+  v.play();
+  v.onended=()=>{
+    document.getElementById("scanScreen").classList.remove("hidden");
+    startScan();
+  };
+}
+
+/* الفحص */
+function startScan(){
+  let counter=document.getElementById("counter");
+  let progress=document.getElementById("progressBar");
+  let i=0;
+  let interval=setInterval(()=>{
+    i++;
+    counter.innerText=(Math.floor(Math.random()*999999)).toString().padStart(6,"0");
+    progress.style.width=(i*2)+"%";
+    if(i>=50) clearInterval(interval);
+  },50);
 }
 
 </script>
-
 </body>
 </html>
